# tar-no-std

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: alloc_feature.rs  minimal.rs
src/: archive.rs  header.rs  lib.rs  tar_format_string.rs  tar_format_types.rs
tests/: mac_tar_ustar_with_dir.tar
