[package]
name = "tar-no-std-extended"
description = """
Library to read Tar archives (by GNU Tar) in `no_std` contexts with zero allocations. Based on [tar-no-std](https://github.com/phip1611/tar-no-std)
The crate is simple and only supports reading of "basic" archives, therefore no extensions, such
as GNU Longname. The maximum supported file name length is 256 characters excluding the NULL-byte (using the tar name/prefix longname implementation).
The maximum supported file size is 8GiB. Directories are supported, but only regular fields are yielded in iteration.
"""
version = "0.3.0"
edition = "2021"
keywords = ["tar", "tarball", "archive"]
categories = ["data-structures", "no-std", "parser-implementations"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/schnoberts1/tar-no-std"
repository = "https://github.com/schnoberts1/tar-no-std"
documentation = "https://github.com/schnoberts1/tar-no-std"

# required because "env_logger" uses "log" but with dependency to std..
resolver = "2"

[features]
default = []
alloc = []

[dependencies]
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.0"
memchr = { version = "2.5.0", default-features = false }
log = { version = "0.4", default-features = false }
num-traits =  { version = "0.2.16", default-features = false }
[dev-dependencies]
env_logger = "0.10"
